--- a/OmoCommunity/README.rdoc
+++ b/OmoCommunity/README.rdoc
@@ -1,28 +1,13 @@
-== README
+== PROGRESS REPORT
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Checkpoint 1, yang telah dilakukan :
+    * Thread - done
+    * Post - done
+    * History dari edit post - done
+    * User dan profilnya - done
+    * Sistem voting untuk post - done
+    * Lock untuk thread - done
+    * Search - done
+    * Notification(Additional) - done
+    * Omniauth(Additional) - done
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
